--- a/style.css
+++ b/style.css
@@ -1505,10 +1505,10 @@ a:visited {
 
 .talk-base .tk-puff .tk-content.tks-s {
   z-index: auto;
-  border-top-left-radius: 39% 39%;
-  border-top-right-radius: 44% 44%;
-  border-bottom-right-radius: 36% 37%;
-  border-bottom-left-radius: 42% 38%;
+  border-top-left-radius: 39% 43%;
+  border-top-right-radius: 38% 41%;
+  border-bottom-right-radius: 43% 43%;
+  border-bottom-left-radius: 37% 40%;
 }
 
 .talk-base .tk-puff .tk-content.tks-s::before, .talk-base .tk-puff .tk-content.tks-s::after {
@@ -1526,29 +1526,29 @@ a:visited {
   left: 5%;
   -webkit-transform: rotate(11deg);
           transform: rotate(11deg);
-  border-top-left-radius: 40% 40%;
-  border-top-right-radius: 39% 45%;
-  border-bottom-right-radius: 41% 44%;
-  border-bottom-left-radius: 36% 37%;
+  border-top-left-radius: 37% 39%;
+  border-top-right-radius: 37% 37%;
+  border-bottom-right-radius: 37% 41%;
+  border-bottom-left-radius: 43% 41%;
 }
 
 .talk-base .tk-puff .tk-content.tks-s::after {
   width: 90%;
   left: 5%;
-  -webkit-transform: rotate(-13deg);
-          transform: rotate(-13deg);
-  border-top-left-radius: 40% 44%;
-  border-top-right-radius: 44% 40%;
-  border-bottom-right-radius: 38% 45%;
-  border-bottom-left-radius: 42% 36%;
+  -webkit-transform: rotate(-11deg);
+          transform: rotate(-11deg);
+  border-top-left-radius: 45% 43%;
+  border-top-right-radius: 41% 45%;
+  border-bottom-right-radius: 37% 43%;
+  border-bottom-left-radius: 36% 40%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m {
   z-index: auto;
-  border-top-left-radius: 44% 37%;
-  border-top-right-radius: 39% 34%;
-  border-bottom-right-radius: 42% 32%;
-  border-bottom-left-radius: 38% 34%;
+  border-top-left-radius: 38% 29%;
+  border-top-right-radius: 40% 29%;
+  border-bottom-right-radius: 38% 30%;
+  border-bottom-left-radius: 40% 38%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m::before, .talk-base .tk-puff .tk-content.tks-m::after {
@@ -1562,29 +1562,29 @@ a:visited {
 }
 
 .talk-base .tk-puff .tk-content.tks-m::before {
-  -webkit-transform: rotate(8deg);
-          transform: rotate(8deg);
-  border-top-left-radius: 50% 38%;
-  border-top-right-radius: 41% 33%;
-  border-bottom-right-radius: 42% 39%;
-  border-bottom-left-radius: 41% 34%;
+  -webkit-transform: rotate(9deg);
+          transform: rotate(9deg);
+  border-top-left-radius: 42% 34%;
+  border-top-right-radius: 44% 36%;
+  border-bottom-right-radius: 49% 39%;
+  border-bottom-left-radius: 48% 39%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m::after {
-  -webkit-transform: rotate(-12deg);
-          transform: rotate(-12deg);
-  border-top-left-radius: 46% 38%;
-  border-top-right-radius: 42% 31%;
-  border-bottom-right-radius: 49% 38%;
-  border-bottom-left-radius: 48% 36%;
+  -webkit-transform: rotate(-13deg);
+          transform: rotate(-13deg);
+  border-top-left-radius: 44% 32%;
+  border-top-right-radius: 44% 36%;
+  border-bottom-right-radius: 42% 32%;
+  border-bottom-left-radius: 41% 37%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l {
   z-index: auto;
-  border-top-left-radius: 38% 22%;
-  border-top-right-radius: 39% 25%;
-  border-bottom-right-radius: 35% 26%;
-  border-bottom-left-radius: 33% 29%;
+  border-top-left-radius: 40% 22%;
+  border-top-right-radius: 31% 29%;
+  border-bottom-right-radius: 34% 25%;
+  border-bottom-left-radius: 31% 26%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l::before, .talk-base .tk-puff .tk-content.tks-l::after {
@@ -1600,19 +1600,19 @@ a:visited {
 .talk-base .tk-puff .tk-content.tks-l::before {
   -webkit-transform: rotate(6deg);
           transform: rotate(6deg);
-  border-top-left-radius: 44% 31%;
-  border-top-right-radius: 49% 33%;
-  border-bottom-right-radius: 41% 26%;
-  border-bottom-left-radius: 41% 35%;
+  border-top-left-radius: 45% 30%;
+  border-top-right-radius: 44% 30%;
+  border-bottom-right-radius: 42% 33%;
+  border-bottom-left-radius: 41% 28%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l::after {
   -webkit-transform: rotate(-7deg);
           transform: rotate(-7deg);
-  border-top-left-radius: 47% 28%;
-  border-top-right-radius: 42% 35%;
-  border-bottom-right-radius: 50% 34%;
-  border-bottom-left-radius: 50% 27%;
+  border-top-left-radius: 41% 28%;
+  border-top-right-radius: 48% 26%;
+  border-bottom-right-radius: 48% 32%;
+  border-bottom-left-radius: 44% 26%;
 }
 
 .talk-base .tk-puff .tk-content .tkc-p {
@@ -1752,6 +1752,102 @@ a:visited {
 
 #comment {
   width: 100%;
+}
+
+/*投稿エリア*/
+@media screen and (max-width: 2400px) {
+  #comments-post {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  #comments-post {
+    display: block;
+    position: fixed;
+    background-color: #0000;
+    width: auto;
+    height: auto;
+    right: 5%;
+    bottom: 5%;
+    z-index: 2;
+  }
+  #comments-post #comments-post--on {
+    display: none;
+  }
+  #comments-post .comments-post--area {
+    display: block;
+    position: fixed;
+    z-index: auto;
+    border-top-left-radius: 41% 37%;
+    border-top-right-radius: 43% 39%;
+    border-bottom-right-radius: 37% 43%;
+    border-bottom-left-radius: 40% 40%;
+    -webkit-backdrop-filter: blur(5px);
+            backdrop-filter: blur(5px);
+  }
+  #comments-post .comments-post--area::before, #comments-post .comments-post--area::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+  #comments-post .comments-post--area::before {
+    left: -5%;
+    top: 5%;
+    width: 110%;
+    height: 90%;
+    -webkit-transform: rotate(23deg);
+            transform: rotate(23deg);
+    border-top-left-radius: 55% 57%;
+    border-top-right-radius: 48% 56%;
+    border-bottom-right-radius: 54% 61%;
+    border-bottom-left-radius: 53% 62%;
+    background-color: red;
+  }
+  #comments-post .comments-post--area::after {
+    left: 5%;
+    top: -5%;
+    width: 90%;
+    height: 110%;
+    -webkit-transform: rotate(-22deg);
+            transform: rotate(-22deg);
+    border-top-left-radius: 46% 61%;
+    border-top-right-radius: 52% 56%;
+    border-bottom-right-radius: 54% 58%;
+    border-bottom-left-radius: 48% 61%;
+    background-color: green;
+  }
+  #comments-post #comments-post--on:not(:checked) ~ .comments-post--area {
+    background-color: #fdfffd;
+    bottom: 5%;
+    right: 24%;
+    width: 12vw;
+    height: 12vw;
+    -webkit-filter: drop-shadow(0.5px 0.5px 0px #000) drop-shadow(-0.5px 0.5px 0px #000) drop-shadow(0.5px -0.5px 0px #000) drop-shadow(-0.5px -0.5px 0px #000) drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.9));
+            filter: drop-shadow(0.5px 0.5px 0px #000) drop-shadow(-0.5px 0.5px 0px #000) drop-shadow(0.5px -0.5px 0px #000) drop-shadow(-0.5px -0.5px 0px #000) drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.9));
+    -webkit-animation: yurayura 22s linear 24ms infinite normal both;
+            animation: yurayura 22s linear 24ms infinite normal both;
+  }
+  #comments-post #comments-post--on:not(:checked) ~ .comments-post--area::before, #comments-post #comments-post--on:not(:checked) ~ .comments-post--area::after {
+    background-color: #fdfffd;
+  }
+  #comments-post #comments-post--on:checked ~ .comments-post--area {
+    background-color: rgba(253, 255, 253, 0.6);
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    -webkit-filter: none;
+            filter: none;
+  }
+  #comments-post #comments-post--on:checked ~ .comments-post--area::before, #comments-post #comments-post--on:checked ~ .comments-post--area::after {
+    background-color: rgba(253, 255, 253, 0);
+  }
 }
 
 #primary, #secondary {
@@ -1947,10 +2043,10 @@ a:visited {
     display: block;
     position: fixed;
     z-index: auto;
-    border-top-left-radius: 37% 40%;
-    border-top-right-radius: 38% 40%;
-    border-bottom-right-radius: 41% 43%;
-    border-bottom-left-radius: 36% 43%;
+    border-top-left-radius: 42% 40%;
+    border-top-right-radius: 43% 45%;
+    border-bottom-right-radius: 42% 37%;
+    border-bottom-left-radius: 38% 43%;
     -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
   }
@@ -1968,12 +2064,12 @@ a:visited {
     top: 5%;
     width: 110%;
     height: 90%;
-    -webkit-transform: rotate(23deg);
-            transform: rotate(23deg);
-    border-top-left-radius: 50% 58%;
-    border-top-right-radius: 47% 64%;
-    border-bottom-right-radius: 51% 63%;
-    border-bottom-left-radius: 51% 58%;
+    -webkit-transform: rotate(24deg);
+            transform: rotate(24deg);
+    border-top-left-radius: 49% 57%;
+    border-top-right-radius: 52% 65%;
+    border-bottom-right-radius: 52% 62%;
+    border-bottom-left-radius: 53% 57%;
     background-color: red;
   }
   #navimenu .navimenu--area::after {
@@ -1981,12 +2077,12 @@ a:visited {
     top: -5%;
     width: 90%;
     height: 110%;
-    -webkit-transform: rotate(-23deg);
-            transform: rotate(-23deg);
-    border-top-left-radius: 55% 63%;
-    border-top-right-radius: 53% 56%;
-    border-bottom-right-radius: 55% 60%;
-    border-bottom-left-radius: 52% 57%;
+    -webkit-transform: rotate(-22deg);
+            transform: rotate(-22deg);
+    border-top-left-radius: 48% 58%;
+    border-top-right-radius: 52% 65%;
+    border-bottom-right-radius: 46% 62%;
+    border-bottom-left-radius: 46% 63%;
     background-color: green;
   }
   #navimenu #navimenu--on:not(:checked) ~ .navimenu--area {
@@ -1997,8 +2093,8 @@ a:visited {
     height: 12vw;
     -webkit-filter: drop-shadow(0.5px 0.5px 0px #000) drop-shadow(-0.5px 0.5px 0px #000) drop-shadow(0.5px -0.5px 0px #000) drop-shadow(-0.5px -0.5px 0px #000) drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.9));
             filter: drop-shadow(0.5px 0.5px 0px #000) drop-shadow(-0.5px 0.5px 0px #000) drop-shadow(0.5px -0.5px 0px #000) drop-shadow(-0.5px -0.5px 0px #000) drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.9));
-    -webkit-animation: yurayura 20s linear 0s infinite normal both;
-            animation: yurayura 20s linear 0s infinite normal both;
+    -webkit-animation: yurayura 17s linear 60ms infinite normal both;
+            animation: yurayura 17s linear 60ms infinite normal both;
   }
   #navimenu #navimenu--on:not(:checked) ~ .navimenu--area::before, #navimenu #navimenu--on:not(:checked) ~ .navimenu--area::after {
     background-color: #fdfffd;
